// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DisambiguatedProfileView renders the default state 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
  >
    <span
      class="disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Alice
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView renders the full example 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
    title="Eve (@eve:matrix.org)"
  >
    <span
      class="mx_Username_color5 disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Eve
    </span>
    <span
      class="disambiguatedProfile_mxid mx_DisambiguatedProfile_mxid"
    >
      @eve:matrix.org
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView renders with MXID for disambiguation 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
  >
    <span
      class="mx_Username_color1 disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Alice
    </span>
    <span
      class="disambiguatedProfile_mxid mx_DisambiguatedProfile_mxid"
    >
      @alice:example.org
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView renders with color class 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
  >
    <span
      class="mx_Username_color3 disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Bob
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView renders with emphasized display name 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
  >
    <span
      class="disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Charlie
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView renders with tooltip 1`] = `
<div>
  <div
    class="disambiguatedProfile mx_DisambiguatedProfile"
    title="Diana (@diana:example.org)"
  >
    <span
      class="disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Diana
    </span>
  </div>
</div>
`;
